// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`albumClasses returns default 1`] = `"background--fill ratio--square float-left push-half-right background--primary floating__item mini-album-cover_lky7wq"`;

exports[`fadeClass returns style class if fading 1`] = `"mini-player-fade_16y77lf"`;

exports[`layoutClasses adds transition class if transitioning 1`] = `"locked-bottom one-whole background--light-tertiary text-left soft-half floating mini-player_m1kr30 mini-player-transition_1yf3vg1"`;

exports[`layoutClasses appends classes from props 1`] = `"locked-bottom one-whole background--light-tertiary text-left soft-half floating one two"`;

exports[`layoutClasses returns default classes by default 1`] = `"locked-bottom one-whole background--light-tertiary text-left soft-half floating mini-player_m1kr30"`;

exports[`overrides with theme 1`] = `
<div>
  <div
    className="locked-bottom one-whole background--alert text-right text-light-primary soft-half mini-player-stop_ia2syq"
    style={
      Object {
        "left": "-100%",
      }
    }
  >
    <h6
      className="mini-player-stop-h6_whmjdi"
    >
      Stop Audio
      <i
        className="icon-close display-inline-block push-half-sides mini-player-stop-h6-icon_1js55l1"
      />
    </h6>
  </div>
  <div
    className="override"
    onClick={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "left": "0%",
      }
    }
  >
    <div
      className="background--fill ratio--square float-left push-half-right background--primary floating__item mini-album-cover_lky7wq"
      style={
        Object {
          "backgroundImage": "url(http://test.com/1x1.jpg)",
        }
      }
    />
    <div
      className="plain floating__item six-eighths truncate"
    >
      <h6
        className="display-block text-dark-secondary flush"
      />
      <h7
        className="flush text-dark-tertiary"
      >
        track artist – test title
      </h7>
    </div>
    <Connect(AudioControlsWithoutData)
      audio={
        Object {
          "playing": Object {
            "album": Object {
              "artist": "album artist",
              "channelName": "music",
              "content": Object {
                "images": Array [
                  Object {
                    "fileLabel": "1:1",
                    "size": "small",
                    "url": "http://test.com/1x1.jpg",
                  },
                ],
              },
              "title": "test title",
            },
            "track": Object {
              "artist": "track artist",
            },
          },
          "state": "default",
        }
      }
      isLight={true}
    />
  </div>
</div>
`;

exports[`playerStyle returns style object 1`] = `
Object {
  "left": "0%",
}
`;

exports[`renders with props 1`] = `
<div>
  <div
    className="locked-bottom one-whole background--alert text-right text-light-primary soft-half mini-player-stop_ia2syq"
    style={
      Object {
        "left": "-100%",
      }
    }
  >
    <h6
      className="mini-player-stop-h6_whmjdi"
    >
      Stop Audio
      <i
        className="icon-close display-inline-block push-half-sides mini-player-stop-h6-icon_1js55l1"
      />
    </h6>
  </div>
  <div
    className="locked-bottom one-whole background--light-tertiary text-left soft-half floating mini-player_m1kr30"
    onClick={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "left": "0%",
      }
    }
  >
    <div
      className="background--fill ratio--square float-left push-half-right background--primary floating__item mini-album-cover_lky7wq"
      style={
        Object {
          "backgroundImage": "url(http://test.com/1x1.jpg)",
        }
      }
    />
    <div
      className="plain floating__item six-eighths truncate"
    >
      <h6
        className="display-block text-dark-secondary flush"
      />
      <h7
        className="flush text-dark-tertiary"
      >
        track artist – test title
      </h7>
    </div>
    <Connect(AudioControlsWithoutData)
      audio={
        Object {
          "playing": Object {
            "album": Object {
              "artist": "album artist",
              "channelName": "music",
              "content": Object {
                "images": Array [
                  Object {
                    "fileLabel": "1:1",
                    "size": "small",
                    "url": "http://test.com/1x1.jpg",
                  },
                ],
              },
              "title": "test title",
            },
            "track": Object {
              "artist": "track artist",
            },
          },
          "state": "default",
        }
      }
      isLight={true}
    />
  </div>
</div>
`;

exports[`stopClasses adds transition class if transitioning 1`] = `"locked-bottom one-whole background--alert text-right text-light-primary soft-half mini-player-stop_ia2syq mini-player-transition_1yf3vg1"`;

exports[`stopClasses returns default classes by default 1`] = `"locked-bottom one-whole background--alert text-right text-light-primary soft-half mini-player-stop_ia2syq"`;

exports[`stopH6Classes returns default 1`] = `"mini-player-stop-h6_whmjdi"`;

exports[`stopH6IconClasses returns default 1`] = `"icon-close display-inline-block push-half-sides mini-player-stop-h6-icon_1js55l1"`;

exports[`test albumClasses returns default 1`] = `"background--fill ratio--square float-left push-half-right background--primary floating__item mini-album-cover_lky7wq"`;

exports[`test fadeClass returns style class if fading 1`] = `"mini-player-fade_16y77lf"`;

exports[`test layoutClasses adds transition class if transitioning 1`] = `"locked-bottom one-whole background--light-tertiary text-left soft-half floating mini-player_m1kr30 mini-player-transition_1yf3vg1"`;

exports[`test layoutClasses appends classes from props 1`] = `"locked-bottom one-whole background--light-tertiary text-left soft-half floating one two"`;

exports[`test layoutClasses returns default classes by default 1`] = `"locked-bottom one-whole background--light-tertiary text-left soft-half floating mini-player_m1kr30"`;

exports[`test overrides with theme 1`] = `
<div>
  <div
    className="locked-bottom one-whole background--alert text-right text-light-primary soft-half mini-player-stop_ia2syq"
    style={
      Object {
        "left": "-100%",
      }
    }>
    <h6
      className="mini-player-stop-h6_whmjdi">
      Stop Audio
      <i
        className="icon-close display-inline-block push-half-sides mini-player-stop-h6-icon_1js55l1" />
    </h6>
  </div>
  <div
    className="override"
    onClick={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "left": "0%",
      }
    }>
    <div
      className="background--fill ratio--square float-left push-half-right background--primary floating__item mini-album-cover_lky7wq"
      style={
        Object {
          "backgroundImage": "url(http://test.com/1x1.jpg)",
        }
      } />
    <div
      className="plain floating__item six-eighths truncate">
      <h6
        className="display-block text-dark-secondary flush" />
      <h7
        className="flush text-dark-tertiary">
        track artist – test title
      </h7>
    </div>
    <Connect(AudioControlsWithoutData)
      audio={
        Object {
          "playing": Object {
            "album": Object {
              "artist": "album artist",
              "channelName": "music",
              "content": Object {
                "images": Array [
                  Object {
                    "fileLabel": "1:1",
                    "size": "small",
                    "url": "http://test.com/1x1.jpg",
                  },
                ],
              },
              "title": "test title",
            },
            "track": Object {
              "artist": "track artist",
            },
          },
          "state": "default",
        }
      }
      isLight={true} />
  </div>
</div>
`;

exports[`test playerStyle returns style object 1`] = `
Object {
  "left": "0%",
}
`;

exports[`test renders with props 1`] = `
<div>
  <div
    className="locked-bottom one-whole background--alert text-right text-light-primary soft-half mini-player-stop_ia2syq"
    style={
      Object {
        "left": "-100%",
      }
    }>
    <h6
      className="mini-player-stop-h6_whmjdi">
      Stop Audio
      <i
        className="icon-close display-inline-block push-half-sides mini-player-stop-h6-icon_1js55l1" />
    </h6>
  </div>
  <div
    className="locked-bottom one-whole background--light-tertiary text-left soft-half floating mini-player_m1kr30"
    onClick={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "left": "0%",
      }
    }>
    <div
      className="background--fill ratio--square float-left push-half-right background--primary floating__item mini-album-cover_lky7wq"
      style={
        Object {
          "backgroundImage": "url(http://test.com/1x1.jpg)",
        }
      } />
    <div
      className="plain floating__item six-eighths truncate">
      <h6
        className="display-block text-dark-secondary flush" />
      <h7
        className="flush text-dark-tertiary">
        track artist – test title
      </h7>
    </div>
    <Connect(AudioControlsWithoutData)
      audio={
        Object {
          "playing": Object {
            "album": Object {
              "artist": "album artist",
              "channelName": "music",
              "content": Object {
                "images": Array [
                  Object {
                    "fileLabel": "1:1",
                    "size": "small",
                    "url": "http://test.com/1x1.jpg",
                  },
                ],
              },
              "title": "test title",
            },
            "track": Object {
              "artist": "track artist",
            },
          },
          "state": "default",
        }
      }
      isLight={true} />
  </div>
</div>
`;

exports[`test stopClasses adds transition class if transitioning 1`] = `"locked-bottom one-whole background--alert text-right text-light-primary soft-half mini-player-stop_ia2syq mini-player-transition_1yf3vg1"`;

exports[`test stopClasses returns default classes by default 1`] = `"locked-bottom one-whole background--alert text-right text-light-primary soft-half mini-player-stop_ia2syq"`;

exports[`test stopH6Classes returns default 1`] = `"mini-player-stop-h6_whmjdi"`;

exports[`test stopH6IconClasses returns default 1`] = `"icon-close display-inline-block push-half-sides mini-player-stop-h6-icon_1js55l1"`;

exports[`test works without fileLabel 1`] = `
<div>
  <div
    className="locked-bottom one-whole background--alert text-right text-light-primary soft-half mini-player-stop_ia2syq"
    style={
      Object {
        "left": "-100%",
      }
    }>
    <h6
      className="mini-player-stop-h6_whmjdi">
      Stop Audio
      <i
        className="icon-close display-inline-block push-half-sides mini-player-stop-h6-icon_1js55l1" />
    </h6>
  </div>
  <div
    className="locked-bottom one-whole background--light-tertiary text-left soft-half floating mini-player_m1kr30"
    onClick={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "left": "0%",
      }
    }>
    <div
      className="background--fill ratio--square float-left push-half-right background--primary floating__item mini-album-cover_lky7wq"
      style={
        Object {
          "backgroundImage": "url(http://test.com/1x1.jpg)",
        }
      } />
    <div
      className="plain floating__item six-eighths truncate">
      <h6
        className="display-block text-dark-secondary flush" />
      <h7
        className="flush text-dark-tertiary">
        track artist – test title
      </h7>
    </div>
    <Connect(AudioControlsWithoutData)
      audio={
        Object {
          "playing": Object {
            "album": Object {
              "artist": "album artist",
              "channelName": "music",
              "content": Object {
                "images": Array [
                  Object {
                    "fileLabel": null,
                    "size": "small",
                    "url": "http://test.com/1x1.jpg",
                  },
                ],
              },
              "title": "test title",
            },
            "track": Object {
              "artist": "track artist",
            },
          },
          "state": "default",
        }
      }
      isLight={true} />
  </div>
</div>
`;

exports[`works without fileLabel 1`] = `
<div>
  <div
    className="locked-bottom one-whole background--alert text-right text-light-primary soft-half mini-player-stop_ia2syq"
    style={
      Object {
        "left": "-100%",
      }
    }
  >
    <h6
      className="mini-player-stop-h6_whmjdi"
    >
      Stop Audio
      <i
        className="icon-close display-inline-block push-half-sides mini-player-stop-h6-icon_1js55l1"
      />
    </h6>
  </div>
  <div
    className="locked-bottom one-whole background--light-tertiary text-left soft-half floating mini-player_m1kr30"
    onClick={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "left": "0%",
      }
    }
  >
    <div
      className="background--fill ratio--square float-left push-half-right background--primary floating__item mini-album-cover_lky7wq"
      style={
        Object {
          "backgroundImage": "url(http://test.com/1x1.jpg)",
        }
      }
    />
    <div
      className="plain floating__item six-eighths truncate"
    >
      <h6
        className="display-block text-dark-secondary flush"
      />
      <h7
        className="flush text-dark-tertiary"
      >
        track artist – test title
      </h7>
    </div>
    <Connect(AudioControlsWithoutData)
      audio={
        Object {
          "playing": Object {
            "album": Object {
              "artist": "album artist",
              "channelName": "music",
              "content": Object {
                "images": Array [
                  Object {
                    "fileLabel": null,
                    "size": "small",
                    "url": "http://test.com/1x1.jpg",
                  },
                ],
              },
              "title": "test title",
            },
            "track": Object {
              "artist": "track artist",
            },
          },
          "state": "default",
        }
      }
      isLight={true}
    />
  </div>
</div>
`;
